fix: 移除header-spacing, 修正修正mobile menu樣式

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,13 @@
+@import "variables";
+@import "mixins";
+
 .container {
   max-height: 100vh;
+}
+
+.component-header-spacing {
+  padding-top: $header-height;
+  @include generateStyleByMaxBreakpoint("sm") {
+    padding-top: 3.125rem;
+  }
 }
