--- a/src/app/modules/common/pages/home-page/home-page.component.scss
+++ b/src/app/modules/common/pages/home-page/home-page.component.scss
@@ -3,7 +3,17 @@
 
 .video-container {
   &__gradient-bg {
-    background: linear-gradient(180deg, map-get($azure-light, 2) 0%, map-get($cyan-light, 2) 33.3%, map-get($green-light, 2) 66.6%, #FFFb9D 100%);
+    padding-top: $header-height;
+    @include generateStyleByMaxBreakpoint("sm") {
+      padding-top: 3.125rem;
+    }
+    background: linear-gradient(
+      180deg,
+      map-get($azure-light, 2) 0%,
+      map-get($cyan-light, 2) 33.3%,
+      map-get($green-light, 2) 66.6%,
+      #fffb9d 100%
+    );
     height: 570px;
     @include generateStyleByBreakpoint("sm") {
       height: 742px;
@@ -85,7 +95,8 @@
     }
 
     &:hover::ng-deep {
-      .news-list__date, .news-list__title {
+      .news-list__date,
+      .news-list__title {
         color: map-get($primary-light, 4) !important;
       }
 
@@ -95,7 +106,8 @@
     }
 
     &:active::ng-deep {
-      .news-list__date, .news-list__title {
+      .news-list__date,
+      .news-list__title {
         color: map-get($primary-light, 2) !important;
       }
 
@@ -149,8 +161,18 @@
   }
 
   &__gradient-bg {
-    background: linear-gradient(0deg, rgba(255, 255, 255, 0) 50%, rgba(255, 255, 255, 1) 100%),
-    linear-gradient(90deg, map-get($azure-light, 2) 0%, map-get($cyan-light, 2) 33.3%, map-get($green-light, 2) 66.6%, #FFFb9D 100%);
+    background: linear-gradient(
+        0deg,
+        rgba(255, 255, 255, 0) 50%,
+        rgba(255, 255, 255, 1) 100%
+      ),
+      linear-gradient(
+        90deg,
+        map-get($azure-light, 2) 0%,
+        map-get($cyan-light, 2) 33.3%,
+        map-get($green-light, 2) 66.6%,
+        #fffb9d 100%
+      );
   }
 
   &__cards {
@@ -231,9 +253,14 @@
 
 .divider-colored {
   height: 2px;
-  background: linear-gradient(90deg, map-get($azure-light, 2) 0%, map-get($cyan-light, 2) 33.3%, map-get($green-light, 2) 66.6%, #FFFb9D 100%);
+  background: linear-gradient(
+    90deg,
+    map-get($azure-light, 2) 0%,
+    map-get($cyan-light, 2) 33.3%,
+    map-get($green-light, 2) 66.6%,
+    #fffb9d 100%
+  );
 }
-
 
 @keyframes fade-in-left-top {
   from {
